src/Components/Pages/Resume.css
.Content-Resume {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  justify-content: space-evenly;
}

.Left-Side {
  display: flex;
  flex-direction: column;
  min-width: 35%;
  max-width: 40%;
  height: 100%;
  background-color: lightgray;
}

.Line-Left {
  padding: 0;
  margin: 0;
}

.Education {
  padding: 0 1rem;
  margin: 0;
}

.Education H1 {
  padding: 0rem;
  margin-top: 1rem;
  margin-bottom: 0;
}

.Education H2 {
  padding: 0.5rem;
  margin: 0;
}

.Education-Uni {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0;
  margin: 0;
}

.Education-Awards {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0 1.5rem;
  margin: 0;
}

.Education-Awards H3 {
  padding: 0.3rem 0;
  margin: 0;
}

.Skills {
  padding: 0 1rem;
  margin: 0;
}

.Skills H1 {
  padding: 0rem;
  margin-top: 1.5rem;
  margin-bottom: 0.5rem;
}

.Skills-List {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0;
  margin: 0;
}

.Skills-List li {
  font-size: 16pt;
  font-weight: bolder;
}

.Skills-AWS li {
  font-size: 14pt;
  font-weight: bold;
  padding: 0.1rem;
}

.Courses {
  padding: 0 1rem;
  margin: 0;
}

.Courses H1 {
  padding: 0rem;
  margin-top: 1.5rem;
  margin-bottom: 0.5rem;
}

.Courses-List {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0;
  margin: 0;
}

.Courses-List li {
  font-size: 16pt;
  font-weight: bolder;
  padding: 0.1rem;
}

.Courses-Sublist li {
  font-size: 14pt;
  font-weight: bold;
}

.Right-Side {
  display: flex;
  flex-direction: column;
  max-height: 100%;
  width: 100%;
  justify-content: left;
  align-items: center;
}

.Work {
  padding: 0;
  margin: 0;
  margin-left: 1rem;
  height: 100%;
  width: fit-content;
}

.Work H1 {
  padding: 0rem;
  margin-top: 1rem;
  margin-bottom: 0;
}

.Work H2 {
  padding: 0.5rem;
  margin: 0;
}

.Line-Right {
  padding: 0;
  margin: 0;
}

.Job {
  padding: 0 1rem;
  margin: 0;
  display: flex;
  flex-direction: column;
}

.Job H2 {
  padding: 0rem;
  margin-top: 1.5rem;
  margin-bottom: 0.5rem;
}

.Job H3 {
  padding: 0rem;
  margin-top: 0;
  margin-bottom: 0;
}

.Job-Header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: flex-start;
  padding: 0;
  margin: 0;
}

.Job-List {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 0;
  margin: 0;
}

.Job-List ul {
  padding: 0.3rem 2.25rem;
  margin: 0;
}

.Job-List li {
  font-size: 12pt;
  font-weight: bold;
  padding: 0.1rem;
}

.Job-Sublist li {
  font-size: 14pt;
  font-weight: bold;
}

@media screen and (max-width: 940px) {
  .Content-Resume {
    display: flex;
    flex-direction: column;
    width: 100%;
    min-height: 100vh;
    justify-content: space-between;
  }

  .Left-Side {
    display: flex;
    flex-direction: column;
    min-width: 100%;
    min-height: 35%;
    background-color: lightgray;
    order: 1;
  }

  .Right-Side {
    display: flex;
    flex-direction: column;
    min-width: 100%;
    height: 65%;
    order: 2;
    /*
  background-color: aquamarine;
  */
  }
}

